// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:Select renders array of objects without crashing 1`] = `
<section
  className="cf-select"
>
  <label
    className="u-visually-hidden"
    htmlFor="choose-txt"
  >
    Select something
  </label>
  <p>
    Show sumthing
  </p>
  <select
    id="choose-txt"
    onChange={[MockFunction]}
    value="Dos"
  >
    <option
      value="Uno"
    >
      Uno
    </option>
    <option
      value="Dos"
    >
      Dos
    </option>
    <option
      value="Tres"
    >
      Tres
    </option>
  </select>
</section>
`;

exports[`component:Select renders array values without crashing 1`] = `
<section
  className="cf-select"
>
  <label
    className="u-visually-hidden"
    htmlFor="choose-txt"
  >
    Select something
  </label>
  <p>
    Show sumthing
  </p>
  <select
    id="choose-txt"
    onChange={[MockFunction]}
    value="Dos"
  >
    <option
      disabled={false}
      value="Uno"
    >
      Uno
    </option>
    <option
      disabled={false}
      value="Dos"
    >
      Dos
    </option>
    <option
      disabled={false}
      value="Tres"
    >
      Tres
    </option>
  </select>
</section>
`;

exports[`component:Select renders object values without crashing 1`] = `
<section
  className="cf-select"
>
  <label
    className="u-visually-hidden"
    htmlFor="choose-size"
  >
    Select size
  </label>
  <p>
    Show
  </p>
  <select
    id="choose-size"
    onChange={[MockFunction]}
    value={10}
  >
    <option
      disabled={false}
      value="10"
    >
      10 results
    </option>
    <option
      disabled={false}
      value="25"
    >
      25 results
    </option>
    <option
      disabled={false}
      value="50"
    >
      50 results
    </option>
    <option
      disabled={false}
      value="100"
    >
      100 results
    </option>
  </select>
</section>
`;
